<resources>
    <string name="app_name"></string>
    <string name="writeDiaryTitle">How\'s your day going, Paps?</string>
    <string name="writeDiaryBody">We want to know what\'s going on with you! Care to share it with us?</string>
    <string name="writeDiarySave">SAVE MY THOUGHT</string>
    <string name="date">31</string>
    <string name="year">2018</string>
    <string name="month">OCT</string>
    <string name="time">1:15 AM</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="check_email">Check your email</string>
    <string name="check_email_sub">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when specimen book. It has
    </string>
    <string name="myThoughts">My Thoughts</string>
    <string name="start">Get started</string>
    <string name="percentage">0%</string>
    <string name="talk_with_sai">Talk with SAI</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</string>
    <string-array name="months">

        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to answer</item>
    </string-array>
</resources>
