<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    tools:context=".WriteDiary">

    <RelativeLayout
        android:id="@+id/diaryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/writeDiaryTitle"
            android:textColor="@color/colorAccent"
            android:textColorHint="@drawable/selector"
            android:textSize="30sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/diaryBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/diaryTitle"
        android:layout_marginTop="30dp"
        android:background="@drawable/diary_body_layout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/writeDiaryBody"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:background="@null"
            android:textColor="@color/colorAccent"
            android:textColorHint="@drawable/selector"
            android:textSize="18sp" />
    </RelativeLayout>


    <TextView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_width="250dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:text="@string/writeDiarySave"
        android:layout_alignParentBottom="true"
        android:elevation="4dp"
        android:textSize="18dp"
        android:gravity="center"
        android:background="@drawable/white_background_button"
        android:layout_marginBottom="50dp"
        android:padding="25dp"
        android:id="@+id/saveDiary"/>


</RelativeLayout>