<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingTop="40dp"
    tools:context=".SavedJournal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/listIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_list_black_24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:paddingBottom="40dp"

        android:id="@+id/writeDiary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        android:paddingRight="8dp"
        android:background="@drawable/thought_diary_list"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/date"
                android:textColor="#fff"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/month"
                android:textColor="#fff"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/month"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/year"
                android:textColor="#fff"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/year"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:paddingTop="80dp"
                android:paddingBottom="80dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/time"
                android:textColor="#fff"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp">

        <ImageView
            android:id="@+id/addIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="30dp"
            android:clickable="true"
            android:padding="4dp"
            android:background="@drawable/ovalpurple"
            android:layout_alignParentBottom="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/icon_addition"/>
    </RelativeLayout>



</LinearLayout>